--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,7 +18,7 @@
     "react-html-parser": "^2.0.2",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.21.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-tag-input-component": "^2.0.2",
     "web-vitals": "^2.1.4"
